Se añade angular materials y se desarrolla el componente lista-negocios